# Notes

./: README.md
Django_project/: pyproject.toml
Django_project/notes/noteapp/: forms.py  urls.py  views.py
Django_project/notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
Django_project/notes/notes/: settings.py
Django_project/notes/users/: forms.py  views.py
Django_project/notes/users/migrations/: 0001_initial.py
