[tool.poetry]
name = "ex-14"
version = "0.1.0"
description = ""
authors = ["Maria-hub746 <113303447+Maria-hub746@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ex_14"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
psycopg2 = "^2.9.5"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
